--- a/i18n/pt.yaml
+++ b/i18n/pt.yaml
@@ -14,6 +14,8 @@ calendar_full_agenda: "Agenda Completa"
 kwanza_locations: "Locais Kwanza"
 search_songs_placeholder: "Buscar por título ou letra..."
 search_songs_label: "Buscar músicas"
+search_songs_empty: "Nenhuma música encontrada com este termo."
+search_songs_clear: "Limpar busca"
 
 # Menu items (podem ser sobrescritos no config)
 menu_home: "Home"
